# az-fa-blueteam

./: .funcignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  deploy_staging.sh  function_app.py  local.settings.json  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: copilot-instructions.md
docs/development/: commit-and-merge.prompt.md  development-process.prompt.md  documentation.prompt.md  implementation-pattern.prompt.md  linting-typechecking.prompt.md  python-coding.prompt.md  testing.prompt.md
docs/examples/: abuseipdb-curl.md  alienvault-curl.md  dns-resolver-curl.md  urlscan-curl.md  whois-curl.md
docs/feedback/: run_1.md  run_2.md  run_3.md
docs/implementation/: abuseipdb.md  alienvault.md  dns_resolver.md  urlscan.md  whois.md
docs/instructions/: automated_commit.md  development_process.md  development_process_entrypoint.md  documentation.md  (+2 more)
functions/: abuseipdb.py  alienvault.py  dns_resolver.py  goodbye.py  helloworld.py  urlscan.py  whois.py
instructions/: development_process.md  linting_typechecking.md
prompts/: abuseipdb.md  google_safe_browsing_cached.md  typechecking.md
src/: function_app.py
tests/: conftest.py  test_abuseipdb.py  test_abuseipdb_endpoint.py  test_abuseipdb_live.py  test_alienvault.py  test_alienvault_endpoint.py  test_alienvault_live.py  test_dns_endpoint_endpoint.py  test_dns_endpoint_live.py  test_dns_http_endpoint.py  test_dns_resolver.py  test_dns_resolver_endpoint.py  test_dns_resolver_lib.py  test_dns_resolver_lib_async.py  test_dns_resolver_live.py  test_endpoints.py  test_urlscan.py  test_urlscan_endpoint.py  test_urlscan_live.py  test_whois.py
(+10 files in other folders)
